[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/AbrilFatface-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Main.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/beach-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scenes/beach-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Scenes/beach-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/Buttons/UI_Flat_Button_Medium_Lock_02a1.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Buttons/button.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/GUI/Buttons/UI_Flat_Button_Medium_Press_02a1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 88
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 67
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 32 )
expand_margin_left = 26.0
expand_margin_right = 26.0
expand_margin_bottom = 6.0
modulate_color = Color( 0.992157, 0.992157, 0.992157, 0.588235 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 32 )
expand_margin_left = 26.0
expand_margin_right = 26.0
expand_margin_bottom = 6.0
modulate_color = Color( 0.992157, 0.992157, 0.992157, 0.588235 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 32 )
expand_margin_left = 26.0
expand_margin_right = 26.0
expand_margin_bottom = 6.0
modulate_color = Color( 0.992157, 0.992157, 0.992157, 0.588235 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 64, 32 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )
Main = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 604.0
color = Color( 1, 0.890196, 0.890196, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 322.5, 180 )
scale = Vector2( 2.01562, 2 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1268.0
margin_bottom = 659.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1268.0
margin_bottom = 659.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1268.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Tropic Cruise"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 420.0
margin_top = 346.0
margin_right = 848.0
margin_bottom = 659.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 428.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="New Game Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 378.0
margin_bottom = 91.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = ExtResource( 8 )
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 428.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Options Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 378.0
margin_bottom = 91.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = ExtResource( 8 )
text = "Options"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 222.0
margin_right = 428.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Load Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 50.0
margin_right = 378.0
margin_bottom = 91.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = ExtResource( 8 )
enabled_focus_mode = 0
text = "Load"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 428.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Credits Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 378.0
margin_bottom = 91.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = ExtResource( 8 )
text = "Credits"

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 240.0
margin_top = 119.0
margin_right = 309.0
margin_bottom = 133.0
rect_scale = Vector2( 2.233, 2.76077 )
text = "FUCK YOU!"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/New Game Button" to="." method="_on_New_Game_Button_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Options Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/Load Button" to="." method="_on_Load_Button_pressed"]
